# devrecog-sample-program-c

./: .gitignore  CMakeLists.txt  README.md
include/: fingkit.h
lib/macosx/: libboost_date_time.dylib  libboost_filesystem.dylib  libboost_iostreams.dylib  libboost_locale.dylib  libboost_regex.dylib  libboost_system.dylib  libboost_thread.dylib  libcrypto.1.0.0.dylib  libfingkit.5.5.2.dylib  libfingkit.dylib  libnetsnmp.30.dylib  libpcap.A.dylib  libprotobuf.9.dylib  libprotobuf.dylib  libssl.1.0.0.dylib
src/: fing_kit_demo.c  fing_kit_demo.cpp  fing_kit_demo.cs
